{
  "version": 4,
  "terraform_version": "1.15.7",
  "serial": 17,
  "lineage": "e08583cd-1bba-7a79-0c0d-9f10e898641a",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "retailiq",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/aa80a914-ec86-4b74-bca2-345231632bfa/resourceGroups/retailiq-rg/providers/Microsoft.Network/networkInterfaces/retailiq-nic",
            "internal_domain_name_suffix": "akwdl1n4nzvudd2re3sl15xcte.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/aa80a914-ec86-4b74-bca2-345231632bfa/resourceGroups/retailiq-rg/providers/Microsoft.Network/publicIPAddresses/retailiq-public-ip",
                "subnet_id": "/subscriptions/aa80a914-ec86-4b74-bca2-345231632bfa/resourceGroups/retailiq-rg/providers/Microsoft.Network/virtualNetworks/retailiq-vnet/subnets/retailiq-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "centralindia",
            "mac_address": "7C-1E-52-3D-66-C7",
            "name": "retailiq-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "retailiq-rg",
            "tags": {
              "Project": "RetailIQ"
            },
            "virtual_machine_id": "/subscriptions/aa80a914-ec86-4b74-bca2-345231632bfa/resourceGroups/retailiq-rg/providers/Microsoft.Compute/virtualMachines/retailiq-vm"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "retailiq-nic",
            "resource_group_name": "retailiq-rg",
            "subscription_id": "aa80a914-ec86-4b74-bca2-345231632bfa"
          },
          "dependencies": [
            "azurerm_public_ip.retailiq",
            "azurerm_resource_group.retailiq",
            "azurerm_subnet.retailiq",
            "azurerm_virtual_network.retailiq"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "retailiq",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/aa80a914-ec86-4b74-bca2-345231632bfa/resourceGroups/retailiq-rg/providers/Microsoft.Network/networkInterfaces/retailiq-nic|/subscriptions/aa80a914-ec86-4b74-bca2-345231632bfa/resourceGroups/retailiq-rg/providers/Microsoft.Network/networkSecurityGroups/retailiq-nsg",
            "network_interface_id": "/subscriptions/aa80a914-ec86-4b74-bca2-345231632bfa/resourceGroups/retailiq-rg/providers/Microsoft.Network/networkInterfaces/retailiq-nic",
            "network_security_group_id": "/subscriptions/aa80a914-ec86-4b74-bca2-345231632bfa/resourceGroups/retailiq-rg/providers/Microsoft.Network/networkSecurityGroups/retailiq-nsg"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_interface.retailiq",
            "azurerm_network_security_group.retailiq",
            "azurerm_public_ip.retailiq",
            "azurerm_resource_group.retailiq",
            "azurerm_subnet.retailiq",
            "azurerm_virtual_network.retailiq"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "retailiq",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/aa80a914-ec86-4b74-bca2-345231632bfa/resourceGroups/retailiq-rg/providers/Microsoft.Network/networkSecurityGroups/retailiq-nsg",
            "location": "centralindia",
            "name": "retailiq-nsg",
            "resource_group_name": "retailiq-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-SSH",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-HTTPS",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-HTTP",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8080",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-Jenkins",
                "priority": 130,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Project": "RetailIQ"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "retailiq-nsg",
            "resource_group_name": "retailiq-rg",
            "subscription_id": "aa80a914-ec86-4b74-bca2-345231632bfa"
          },
          "dependencies": [
            "azurerm_resource_group.retailiq"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/aa80a914-ec86-4b74-bca2-345231632bfa/resourceGroups/retailiq-rg/providers/Microsoft.Network/networkSecurityGroups/retailiq-nsg/securityRules/Allow-HTTP",
            "name": "Allow-HTTP",
            "network_security_group_name": "retailiq-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "retailiq-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "Allow-HTTP",
            "network_security_group_name": "retailiq-nsg",
            "resource_group_name": "retailiq-rg",
            "subscription_id": "aa80a914-ec86-4b74-bca2-345231632bfa"
          },
          "dependencies": [
            "azurerm_network_security_group.retailiq",
            "azurerm_resource_group.retailiq"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/aa80a914-ec86-4b74-bca2-345231632bfa/resourceGroups/retailiq-rg/providers/Microsoft.Network/networkSecurityGroups/retailiq-nsg/securityRules/Allow-HTTPS",
            "name": "Allow-HTTPS",
            "network_security_group_name": "retailiq-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "retailiq-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "Allow-HTTPS",
            "network_security_group_name": "retailiq-nsg",
            "resource_group_name": "retailiq-rg",
            "subscription_id": "aa80a914-ec86-4b74-bca2-345231632bfa"
          },
          "dependencies": [
            "azurerm_network_security_group.retailiq",
            "azurerm_resource_group.retailiq"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "8080",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/aa80a914-ec86-4b74-bca2-345231632bfa/resourceGroups/retailiq-rg/providers/Microsoft.Network/networkSecurityGroups/retailiq-nsg/securityRules/Allow-Jenkins",
            "name": "Allow-Jenkins",
            "network_security_group_name": "retailiq-nsg",
            "priority": 130,
            "protocol": "Tcp",
            "resource_group_name": "retailiq-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "Allow-Jenkins",
            "network_security_group_name": "retailiq-nsg",
            "resource_group_name": "retailiq-rg",
            "subscription_id": "aa80a914-ec86-4b74-bca2-345231632bfa"
          },
          "dependencies": [
            "azurerm_network_security_group.retailiq",
            "azurerm_resource_group.retailiq"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nodeport",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "30080",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/aa80a914-ec86-4b74-bca2-345231632bfa/resourceGroups/retailiq-rg/providers/Microsoft.Network/networkSecurityGroups/retailiq-nsg/securityRules/Allow-NodePort",
            "name": "Allow-NodePort",
            "network_security_group_name": "retailiq-nsg",
            "priority": 140,
            "protocol": "Tcp",
            "resource_group_name": "retailiq-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "Allow-NodePort",
            "network_security_group_name": "retailiq-nsg",
            "resource_group_name": "retailiq-rg",
            "subscription_id": "aa80a914-ec86-4b74-bca2-345231632bfa"
          },
          "dependencies": [
            "azurerm_network_security_group.retailiq",
            "azurerm_resource_group.retailiq"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/aa80a914-ec86-4b74-bca2-345231632bfa/resourceGroups/retailiq-rg/providers/Microsoft.Network/networkSecurityGroups/retailiq-nsg/securityRules/Allow-SSH",
            "name": "Allow-SSH",
            "network_security_group_name": "retailiq-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "retailiq-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "Allow-SSH",
            "network_security_group_name": "retailiq-nsg",
            "resource_group_name": "retailiq-rg",
            "subscription_id": "aa80a914-ec86-4b74-bca2-345231632bfa"
          },
          "dependencies": [
            "azurerm_network_security_group.retailiq",
            "azurerm_resource_group.retailiq"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "retailiq",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/aa80a914-ec86-4b74-bca2-345231632bfa/resourceGroups/retailiq-rg/providers/Microsoft.Network/publicIPAddresses/retailiq-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.224.41.17",
            "ip_version": "IPv4",
            "location": "centralindia",
            "name": "retailiq-public-ip",
            "resource_group_name": "retailiq-rg",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "Project": "RetailIQ"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "retailiq-public-ip",
            "resource_group_name": "retailiq-rg",
            "subscription_id": "aa80a914-ec86-4b74-bca2-345231632bfa"
          },
          "dependencies": [
            "azurerm_resource_group.retailiq"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "retailiq",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/aa80a914-ec86-4b74-bca2-345231632bfa/resourceGroups/retailiq-rg/providers/Microsoft.Network/virtualNetworks/retailiq-vnet/subnets/retailiq-subnet",
            "name": "retailiq-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "retailiq-rg",
            "virtual_network_name": "retailiq-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "retailiq-subnet",
            "resource_group_name": "retailiq-rg",
            "subscription_id": "aa80a914-ec86-4b74-bca2-345231632bfa",
            "virtual_network_name": "retailiq-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.retailiq",
            "azurerm_virtual_network.retailiq"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "retailiq",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "ed35ac02-6ebe-416b-8f91-2764bdfee29c",
            "id": "/subscriptions/aa80a914-ec86-4b74-bca2-345231632bfa/resourceGroups/retailiq-rg/providers/Microsoft.Network/virtualNetworks/retailiq-vnet",
            "location": "centralindia",
            "name": "retailiq-vnet",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "retailiq-rg",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/aa80a914-ec86-4b74-bca2-345231632bfa/resourceGroups/retailiq-rg/providers/Microsoft.Network/virtualNetworks/retailiq-vnet/subnets/retailiq-subnet",
                "name": "retailiq-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ],
            "tags": {
              "Project": "RetailIQ"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "retailiq-vnet",
            "resource_group_name": "retailiq-rg",
            "subscription_id": "aa80a914-ec86-4b74-bca2-345231632bfa"
          },
          "dependencies": [
            "azurerm_resource_group.retailiq"
          ]
        }
      ]
    }
  ]
}